--- a/webui/templates/trackers.html
+++ b/webui/templates/trackers.html
@@ -14,17 +14,19 @@
             <tr>
               <th>Active</th>
               <th>Name</th>
+              <th>Sample</th>
             </tr>
           </thead>
           <tbody>
             {% for tracker in trackers %}
                 <tr>
-                  {% if tracker.name in user_trackers %}
-                      <td>Yes</td>
-                  {% else %}
-                      <td>No</td>
-                  {% endif %}
+                  <td>{{ tracker.active|yesno:'yes,no' }}</td>
                   <td><a href="{{ tracker.auth_url }}">{{ tracker.name }}</a></td>
+                  {% if tracker.active %}
+                      <td><a href="{{ tracker.sample_url }}">sample</a></td>
+                  {% else %}
+                      <td></td>
+                  {% endif %}
                 </tr>
             {% endfor %}
 
