Fixing the route that will take a user to a particular tracker.

--- a/webui/templates/tracker.html
+++ b/webui/templates/tracker.html
@@ -12,7 +12,7 @@
 
 <div class="container">
     <!-- Main component for a primary marketing message or call to action -->
-    <h2>{{ tracker_name }}:</h2>
+    <h1>{{ tracker_name }}</h1>
     <section>
         <h3>Athlete Info</h3>
         <div class="panel-group" id="athleteInfo" role="tablist" aria-multiselectable="true">
