--- a/webui/templates/base.html
+++ b/webui/templates/base.html
@@ -6,48 +6,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-
     <title>Nimbble</title>
-
-    <!-- Bootstrap core CSS -->
+    <link href='http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href="/static/bstrap/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="/static/css/navbar.css" rel="stylesheet">
-
     {% load compressed %}
-    {% compressed_css 'colors' %}
-
+    {% compressed_css 'application' %}
     {% block css %} {% endblock %}
   </head>
-
   <body>
+    <div id="wrap">
+      <aside class="sidebar">
+        <ul class="navigation">
+          <li class="logo {% firstof control.home %}">
+            <a href="{% url webui:home %}">Home</a>
+          </li>
+          <li class="feed {% firstof control.home %}">
+            <a href="{% url webui:home %}">Feed</a>
+          </li>
+          <li Class="stats"><a href="#">Stats</a></li>
+          {% block header-links %} {% endblock %}
+        </ul>
+      </aside>
+      <div id="content">
+        {% block content %} {% endblock %}
+      </div>
+    </div>
 
-    <div class="container">
 
-      <!-- Static navbar -->
-      <nav class="navbar navbar-default" role="navigation">
-        <div class="container-fluid">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="{% url webui:home %}">Biscotti</a>
-          </div>
-          <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav navbar-right">
-                <li class="{% firstof control.home %}"><a href="{% url webui:home %}">Home</a></li>
-                {% block header-links %} {% endblock %}
-            </ul>
-          </div><!--/.nav-collapse -->
-        </div><!--/.container-fluid -->
-      </nav>
-    </div> <!-- /container -->
+
+
     {% csrf_token %}
-    {% block content %} {% endblock %}
+
 
 
     <!-- Bootstrap core JavaScript
