--- a/webui/templates/cover.html
+++ b/webui/templates/cover.html
@@ -7,15 +7,10 @@
 
 {% block content %}
 
-<div class="container">
-    <!-- Main component for a primary marketing message or call to action -->
-    <div class="jumbotron">
-        <h1>Navbar example</h1>
-        <p>This example is a quick exercise to illustrate how the default, static navbar and fixed to top navbar work. It includes the responsive CSS and HTML, so it also adapts to your viewport and device.</p>
-        <p>
-            <a class="btn btn-lg btn-success" href="#" role="button">View navbar docs &raquo;</a>
-        </p>
-    </div>
+<div class="container-fluid">
+  <div class="row">
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam pretium, massa id finibus euismod, orci nulla mattis nibh, vulputate lobortis eros ex quis eros. Vivamus vitae lacinia purus, quis fringilla purus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aenean neque augue, rutrum a faucibus nec, rutrum vitae mi. Fusce ullamcorper suscipit faucibus. Quisque dapibus neque purus, vel tempor arcu efficitur ut. Nullam rhoncus nulla ullamcorper, fringilla ligula sit amet, tempus justo. Aliquam eu mattis nisl. Nulla volutpat massa sed elementum maximus.</p> 
+  </div>
 </div>
 
 {% endblock %}
