--- a/webui/templates/signup.html
+++ b/webui/templates/signup.html
@@ -15,15 +15,22 @@
       <small>Welcome to the nimbble demo.</small>
     </h1>
   </header>
-    <form class="form-signin" role="form" action="{% url webui:add_user %}" method="POST">
-        {% csrf_token %}
-        <label for="inputName" class="sr-only">Name</label>
-        <input type="text" id="inputName" name="userName" class="form-control" placeholder="Name" required="">
-        <label for="inputEmail" class="sr-only">Email address</label>
-        <input type="email" id="inputEmail" name="userEmail" class="form-control" placeholder="Email address" required="" autofocus="">
-
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign up</button>
-    </form>
-
-
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-lg-12 login-wrapper">
+        <div class="card login-box">
+            <form role="form" action="{% url webui:add_user %}" method="POST">
+            {% csrf_token %}
+            <fieldset class="form-group">
+              <input type="text" id="inputName" name="userName" class="form-control" placeholder="Name" required="">
+            </fieldset>
+            <fieldset class="form-group">
+              <input type="email" id="inputEmail" name="userEmail" class="form-control" placeholder="Email address" required="" autofocus="">
+            </fieldset>
+            <button class="btn btn-lg btn-primary btn-block btn-ghost" type="submit">Sign up</button>
+        </form>
+      </div>
+      </div>
+    </div>
+  </div>
 {% endblock %}
