--- a/webui/templates/main.html
+++ b/webui/templates/main.html
@@ -6,15 +6,37 @@
 
 {% block content %}
 
-<div class="container">
+
+<div class="container-fluid">
+    <div class="row ui-header"></div>
     <!-- Main component for a primary marketing message or call to action -->
-    <div class="jumbotron">
-        <h1>Welcome {{ employee.name }}</h1>
-        <form class="form-signin" role="form" action="{% url webui:add_activity %}" method="POST">
-            {% csrf_token %}
-            <button class="btn btn-lg btn-primary btn-block" type="submit">add</button>
-        </form>
+    <div class="row">
+        <div class="row col-md-6 ui-feed">
+            <div class="col-md-12">
+                {% for activity in recent %}
+                    <div class="row ui-activity js-activity">
+                        <div class="ui-info">{{ activity.user.name }} - {{ activity.datetime }}</div>
+                        <div class="col-md-4">
+                            <div>{{ activity.type }}</div>
+                            <div><a href="#">{{ activity.source }}</a></div>
+                        </div>
+                        <div class="col-md-4">
+                            <div>{{ activity.distance }}</div>
+                            <div>Distance</div>
+                        </div>
+                        <div class="col-md-4">
+                            <div>{{ activity.duration }}</div>
+                            <div>Duration</div>
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
+            <div class="col-md-6">
+
+            </div>
+        </div>
     </div>
+
 </div>
 
 {% endblock %}
