added tracker data to sample data

--- a/webui/templates/loader.html
+++ b/webui/templates/loader.html
@@ -11,6 +11,7 @@
     <div class="jumbotron">
         <h2>Users Loaded: {{ result.user_count }}</h2>
         <h2>Activities Loaded: {{ result.activity_count }}</h2>
+        <h2>Trackers Loaded: {{ result.tracker_count }}</h2>
     </div>
 </div>
 
