--- a/webui/templates/cover.html
+++ b/webui/templates/cover.html
@@ -6,11 +6,25 @@
 {% endblock %}
 
 {% block content %}
-
-<div class="container-fluid">
-  <div class="row">
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam pretium, massa id finibus euismod, orci nulla mattis nibh, vulputate lobortis eros ex quis eros. Vivamus vitae lacinia purus, quis fringilla purus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aenean neque augue, rutrum a faucibus nec, rutrum vitae mi. Fusce ullamcorper suscipit faucibus. Quisque dapibus neque purus, vel tempor arcu efficitur ut. Nullam rhoncus nulla ullamcorper, fringilla ligula sit amet, tempus justo. Aliquam eu mattis nisl. Nulla volutpat massa sed elementum maximus.</p> 
+  <header class="header">
+    <h1>
+      Daily feed <em>for</em> <strong>Infinite Energy</strong>
+      <small>Showing activity for <a href="#">Development Department</a></small>
+    </h1>
+  </header>
+  <div class="container-fluid">
+    <div class="row">
+        <div class="col-md-6">
+          I can has feed!
+        </div>
+        <div class="col-md-6">
+          <div class="card">
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sagittis pretium sapien. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vel enim tempus, faucibus diam a, interdum justo. Vivamus laoreet massa vitae erat varius varius sed et sapien. Phasellus vitae elementum est, a dictum odio. Phasellus dignissim sollicitudin magna, eu malesuada mi convallis vel. Quisque sit amet ligula vel sem rhoncus malesuada. In ex ipsum, ornare et gravida vel, commodo ut sapien.
+            </p>
+          </div> 
+        </div>
+      </div>
   </div>
-</div>
 
 {% endblock %}
