--- a/webui/templates/base.html
+++ b/webui/templates/base.html
@@ -45,7 +45,7 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    {% compressed_js 'stats' %}
+    {% compressed_js 'general' %}
     <!--script src="/static/bstrap/js/bootstrap.min.js"></script>
     <script src="/static/bstrap/js/docs.min.js"></script-->
 
