--- a/webui/templates/cover.html
+++ b/webui/templates/cover.html
@@ -1,28 +1,18 @@
 {% extends "base.html" %}
 
 {% block header-links %}
-<!--li class="{% firstof control.login %}"><a href="{% url webui:login %}">Login</a></li-->
-<li class="{% firstof control.signup %}"><a href="{% url webui:signup %}">Signup</a></li>
+  <li class="{% firstof control.login %}"><a href="{% url webui:login %}">Login</a></li>
+  <li class="{% firstof control.signup %}"><a href="{% url webui:signup %}">Signup</a></li>
 {% endblock %}
 
 {% block content %}
   <header class="header">
-    <h1>
-      Daily feed <em>for</em> <strong>Infinite Energy</strong>
-      <small>Showing activity for <a href="#">Development Department</a></small>
-    </h1>
+    <h1>Home</h1>
   </header>
   <div class="container-fluid">
     <div class="row">
-        <div class="col-md-6">
-          I can has feed!
-        </div>
-        <div class="col-md-6">
-          <div class="card">
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sagittis pretium sapien. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vel enim tempus, faucibus diam a, interdum justo. Vivamus laoreet massa vitae erat varius varius sed et sapien. Phasellus vitae elementum est, a dictum odio. Phasellus dignissim sollicitudin magna, eu malesuada mi convallis vel. Quisque sit amet ligula vel sem rhoncus malesuada. In ex ipsum, ornare et gravida vel, commodo ut sapien.
-            </p>
-          </div> 
+        <div class="col-md-12">
+          Main
         </div>
       </div>
   </div>
