Activiti filter from the daily chart indicator.

--- a/webui/static/css/stats.css
+++ b/webui/static/css/stats.css
@@ -58,3 +58,13 @@
 .ui-stat-change.negative{
     color: #c93744;
 }
+
+.brush rect.extent {
+  fill: steelblue;
+  fill-opacity: .125;
+}
+
+.brush .resize path {
+  fill: #eee;
+  stroke: #666;
+}
