--- a/webui/templates/stats.html
+++ b/webui/templates/stats.html
@@ -31,6 +31,9 @@
     </div>
     <!-- Main component for a primary marketing message or call to action -->
     <div class="js-chart-container"></div>
+    <div class="js-dynamic-chart"></div>
+    <div class="js-weekly-indicator"></div>
+    <div class="js-dynamic-feed"></div>
 
 </div>
 
