--- a/webui/templates/main.html
+++ b/webui/templates/main.html
@@ -1,11 +1,5 @@
 {% extends "base.html" %}
-
-{% block header-links %}
-<li class="trackers {% firstof control.trackers %}"><a href="{% url webui:trackers %}">Trackers</a></li>
-{% endblock %}
-
 {% block content %}
-
 <header class="header">
   <h1>
     Daily feed <em>for</em> <strong>Infinite Energy</strong>
@@ -19,30 +13,12 @@
             <ul class="feed">
               {% if not recent %}
                 <li class="empty-set">
-                  <img class="profile small" src="../static/images/snail.png"></img>
+                  <img class="profile small" src="/static/images/snail.png"></img>
                   <p><strong>Oops!</strong> No activity found.</p>
                 </li>
               {% else %}
                 {% for activity in recent %}
-                  <li class="profile">
-                    <img class="profile small" src="../static/images/128.png"></img>
-                    <h4 class="user">Kyle Redon</h4>
-                    <span class="date">- {{ activity.datetime }}</span>
-                    <ul class="stats">
-                      <li>
-                        <div class="value">{{ activity.type }}</div>
-                        <div class="name"><a href="#">{{ activity.source }}</a></div>
-                      </li>
-                      <li>
-                        <div class="value">{{ activity.distance }}</div>
-                        <div class="name">Distance</div>
-                      </li>
-                      <li>
-                        <div class="value">{{ activity.duration }}</div>
-                        <div class="name">Duration</div>
-                      </li>
-                    </ul>
-                  </li>
+                  {% include "activity_row.html" %}
                 {% endfor %}
               {% endif %}
             </ul>
@@ -55,8 +31,4 @@
         </div>
       </div>
   </div>
-
-
-
-
 {% endblock %}
